<resources>
    <string name="app_name">Covid19 News</string>
    <string name="dash">-</string>
    <string name="confirmed">Confirmed</string>
    <string name="deaths">Deaths</string>
    <string name="countries">Countries</string>
    <string name="cases">Cases</string>
    <string name="recovered">Recovered</string>
    <string name="country_name">Country Name</string>
    <string name="currently">CURRENTLY</string>
    <string name="total_confirmed">Total Confirmed</string>
    <string name="new_confirmed">New Confirmed</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="new_deaths">New Deaths</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="new_recovered">New Recovered</string>
    <string name="subtitle">Get the latest information about covid 19 around the world</string>
    <string name="data_negara">Show each county data</string>
    <string name="dummy_data">123</string>
    <string name="title_list_country">Covid19 data each country</string>
    <string name="search">Search</string>
</resources>