<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dp8"
    app:cardBackgroundColor="#1A3F72"
    app:cardCornerRadius="@dimen/dp8"
    app:cardElevation="@dimen/dp8">

    <LinearLayout
        android:id="@+id/lay_globe_header"
        style="@style/LinearMatchHorizontal"
        android:paddingVertical="@dimen/dp8">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_flag_country"
            android:layout_width="@dimen/dp20"
            android:layout_height="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp4"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/txt_country_name"
            style="@style/TextListData"
            android:layout_weight="4"
            android:text="@string/countries" />

        <TextView
            android:id="@+id/itm_cases"
            style="@style/TextListData"
            android:layout_weight="5"
            android:text="@string/cases" />

        <TextView
            android:id="@+id/txt_total_recovered"
            style="@style/TextListData"
            android:layout_weight="5"
            android:text="@string/recovered" />

        <TextView
            android:id="@+id/txt_total_deaths"
            style="@style/TextListData"
            android:layout_weight="5"
            android:text="@string/deaths" />
    </LinearLayout>


</androidx.cardview.widget.CardView>